--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,4 +2,14 @@
 server:
   port: 8080
 
+# 增加数据库连接
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.113.1/wiki?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai&allowMultiQueries=true
+    username: root
+    password: root
 
+
+mybatis:
+  mapper-locations: classpath:/mapper/**/*.xml
